--- a/client/history.html
+++ b/client/history.html
@@ -98,7 +98,10 @@
                             <div>
                                 <h3 class="text-4xl font-bold text-gray-900 mb-2">Historiques</h3>
                             </div>
-
+                            <div>
+                                <h3 class="text-4xl font-bold text-gray-900 mb-2">Total</h3>
+                                <h1 id="total-container" class="text-2xl font-bold text-gray-600 mb-2"></h1>
+                            </div>
                         </div>
                         <div class="flex flex-col mt-8">
                             <div class="overflow-x-auto rounded-lg">
@@ -178,6 +181,7 @@
 
                 let textFromJSON = obj;
                 textFromJSON.forEach(appendNewThing)
+                textFromJSON.forEach(calculate)
 
                 function appendNewThing(jsonTxt) {
                     //Temps de travail
@@ -213,13 +217,25 @@
                     container5.className = "child-holder5";
                     let newP5 = document.createElement("p");
                     newP5.className = "child5";
-                    var a = jsonTxt.work_time.split(':'); // split it at the colons
-                    var minutes = (+a[0]) * 60 + (+a[1]);
+                    let a = jsonTxt.work_time.split(':'); // split it at the colons
+                    let minutes = (+a[0]) * 60 + (+a[1]);
                     let newContent5 = document.createTextNode(jsonTxt.h_rate / 60 * minutes + " €");
                     newP5.appendChild(newContent5);
                     container5.appendChild(newP5);
                     document.getElementsByClassName("gain-container")[0].appendChild(container5);
+
+                    document.getElementById("total-container").innerHTML = calculate() + " €";
+                
                 }
+
+                function calculate(jsonTxt) {
+                    return textFromJSON.reduce((acc, item) => {
+                        let a = item.work_time.split(':'); // copilot merci!!!!
+                        let minutes = (+a[0]) * 60 + (+a[1]);
+                        return acc + item.h_rate / 60 * minutes;
+                    }, 0);
+                }
+                   
             });
 
     }
