--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="./css/calendar.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/59ecaaffaa.js" crossorigin="anonymous"></script>
+    <script defer src="js/auth.js"></script>
+    <script defer src="js/init.js"></script>
+
 
 </head>
 
@@ -47,7 +50,7 @@
         </nav>
         <div class="flex overflow-hidden bg-white pt-16">
             <aside id="sidebar"
-                class="fixed hidden z-20 h-full top-0 left-0 pt-16 flex lg:flex flex-shrink-0 flex-col w-64 transition-width duration-75"
+                class="fixed hidden z-20 h-full top-0 left-0 pt-16 lg:flex flex-shrink-0 flex-col w-64 transition-width duration-75"
                 aria-label="Sidebar">
                 <div class="relative flex-1 flex flex-col min-h-0 border-r border-gray-200 bg-white pt-0">
                     <div class="flex-1 flex flex-col pt-5 pb-4 overflow-y-auto">
@@ -78,8 +81,8 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="./index.html"
-                                        class="text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 flex items-center p-2 group ">
+                                    <a href="#"
+                                        class="logout text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 flex items-center p-2 group ">
                                         <i
                                             class=" text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75 fa-solid fa-arrow-right-from-bracket"></i>
                                         <span class="ml-3 flex-1 whitespace-nowrap">Logout</span>
@@ -115,7 +118,7 @@
                                             historiques</span>
                                     </div>
                                     <div class="flex-shrink-0">
-                                        <a href="./history"
+                                        <a href="./history.html"
                                             class="text-sm font-medium text-cyan-600 hover:bg-gray-100 rounded-lg p-2">Tout
                                             voir</a>
                                     </div>
