--- a/client/index.html
+++ b/client/index.html
@@ -8,23 +8,27 @@
     <link rel="stylesheet" href="./css/backend.css">
     <link rel="stylesheet" href="./css/calendar.css">
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <script defer src="js/login.js"></script>
     <script src="https://kit.fontawesome.com/59ecaaffaa.js" crossorigin="anonymous"></script>
 
 </head>
 
-<body>
+<body class="login">
   
 
     <div class="bg-white">
         <div class="flex min-h-screen items-center justify-center">
           <div class="min-h-1/2 bg-gray-100 border border-gray-300 rounded-2xl shadow-xl">
-            <form action="dashboard.html" method="post">
-              <div class=" mx-4 sm:mx-24 md:mx-34 lg:mx-56 ms:mx-auto  flex items-center space-y-4 py-16 font-semibold text-gray-900 flex-col">
+            <form action="dashboard.html" class="loginForm">
+              <div class="input-group mx-4 sm:mx-24 md:mx-34 lg:mx-56 ms:mx-auto  flex items-center space-y-4 py-16 font-semibold text-gray-900 flex-col">
               <img src="img/iconcal.png" class="h-8 w-7 mr-2" alt="Windster Logo">
                 <h1 class="text-gray-900 text-2xl">Easy Follow</h1>
-                <input class="w-full p-2 bg-gray-50 border border-gray-300 rounded-md   focus:border-blue-700" type="text" name="email" placeholder="E-Mail" id="email" required>
-                <input class="w-full p-2 bg-gray-50 border border-gray-300 rounded-md" type="password" name="password" placeholder="Password" id="password" required>
-                <input type="submit" class="w-full p-2 bg-gray-50 rounded-full font-bold text-gray-900 border border-gray-700" value="Login">
+                <input class="input w-full p-2 bg-gray-50 border border-gray-300 rounded-md   focus:border-blue-700" type="text" name="username" placeholder="Username" id="username" required>
+                <span class="error-message"></span>
+                <input class="input w-full p-2 bg-gray-50 border border-gray-300 rounded-md" type="password" name="password" placeholder="Password" id="password" required>
+                <span class="error-message"></span>
+                <button type="submit" class="button w-full p-2 bg-gray-50 rounded-full font-bold text-gray-900 border border-gray-700">Login</button>
                 <p>Pas de compte ?
                   <a class="font-semibold text-cyan-500" href="#">Enregistrez-vous </a>
                 </p>
@@ -38,3 +42,5 @@
 
 
 </html>
+
+
