--- a/client/history.html
+++ b/client/history.html
@@ -39,7 +39,7 @@
                             <img src="./img/iconcal.png" class="h-8 w-7 mr-2" alt="Windster Logo">
                             <span class="self-center whitespace-nowrap"></span>
                         </a>
-
+                        <span class="pl-2 font-bold text-xl">Easy Follow</span>
                     </div>
                     <div class="flex items-center">
                         <button id="toggleSidebarMobileSearch" type="non"
@@ -99,6 +99,7 @@
                         <div class="mb-4 flex items-center justify-between">
                             <div>
                                 <h3 class="text-4xl font-bold text-gray-900 mb-2">Historique</h3>
+                                <button class="border p-2 rounded-lg hover:bg-green-400">Exporter en pdf</button>
                             </div>
                             <div>
                                 <h3 class="text-3xl font-bold text-gray-900 pt-4">Total</h3>
