--- a/client/calendar.html
+++ b/client/calendar.html
@@ -109,9 +109,8 @@
                                                 name="taux" value="55">
                                         </div>
                                         <div class="form-group">
-                                            <label for="pwd">date:</label>
-                                            <input type="text" class="form-control" id="date" placeholder="" name="date"
-                                                value="10/10/2022">
+                                            <input type="text" class="form-control hidden" id="date" placeholder="" name="date"
+                                                value="">
                                         </div>
                                         <div class="form-group">
                                             <label for="pwd">duree:</label>
