--- a/client/history.html
+++ b/client/history.html
@@ -99,7 +99,8 @@
                         <div class="mb-4 flex items-center justify-between">
                             <div>
                                 <h3 class="text-4xl font-bold text-gray-900 mb-2">Historique</h3>
-                                <button class="border p-2 rounded-lg hover:bg-green-400">Exporter en pdf</button>
+                                <button class="border p-2 rounded-lg hover:bg-green-400" onclick="exportpdf()">Exporter
+                                    en pdf</button>
                             </div>
                             <div>
                                 <h3 class="text-3xl font-bold text-gray-900 pt-4">Total</h3>
@@ -162,7 +163,37 @@
     </div>
     <script src="https://demo.themesberg.com/windster/app.bundle.js"></script>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.3/jspdf.debug.js"></script>
 <script>
+    function exportpdf() {
+        var exporturl = "http://cdapp.test:88/api";
+        fetch(exporturl)
+            .then((res) => res.json())
+            .then((out) => {
+                const text = JSON.stringify(out);
+                const obj = JSON.parse(text);
+                let textFromJSON = obj;
+
+                var doc = new jsPDF();
+                doc.setFont("helvetica");
+                doc.setFontType("bold");
+                doc.setFontSize(9);
+                textFromJSON.forEach(function (data, i) {
+                    let work = data.work_time.split(':') //temps en secondes
+                    var minutes = (+work[0]) * 60 + (+work[1]);
+                    let mygain = Math.round(parseInt(data.h_rate / 60 * minutes))
+                    doc.text(2, 8 + (i * 8),
+                        "Date: " + data.date.split('-').reverse().join('-') + " " +
+                        "Temps de travail : " + data.work_time + " " + "H" + " " +
+                        "Taux horaire : " + data.h_rate + "€/h " + " " +
+                        "Resultat : " + mygain + "€"
+                    );
+                });
+                doc.save('Historique.pdf');
+            })
+    }
+
+
     var url = "http://cdapp.test:88/api";
 
     window.addEventListener("DOMContentLoaded", (event) => {
@@ -175,12 +206,12 @@
             .then((res) => res.json())
             .then((out) => {
 
-               
+
 
                 const text = JSON.stringify(out);
                 const obj = JSON.parse(text);
 
-              
+
 
                 let textFromJSON = obj;
                 textFromJSON.forEach(appendNewThing)
@@ -192,7 +223,7 @@
                     container2.className = "child-holder2";
                     let newP2 = document.createElement("p");
                     newP2.className = "child2";
-                    let newContent2 = document.createTextNode(jsonTxt.work_time);
+                    let newContent2 = document.createTextNode(jsonTxt.work_time + " " + "H");
                     newP2.appendChild(newContent2);
                     container2.appendChild(newP2);
                     document.getElementsByClassName("time-container")[0].appendChild(container2);
@@ -222,7 +253,7 @@
                     newP5.className = "child5";
                     let a = jsonTxt.work_time.split(':'); // split it at the colons
                     let minutes = (+a[0]) * 60 + (+a[1]);
-                    let newContent5 = document.createTextNode(jsonTxt.h_rate / 60 * minutes + " €");
+                    let newContent5 = document.createTextNode(Math.round(jsonTxt.h_rate / 60 * minutes) + " €");
                     newP5.appendChild(newContent5);
                     container5.appendChild(newP5);
                     document.getElementsByClassName("gain-container")[0].appendChild(container5);
@@ -235,7 +266,7 @@
                     return textFromJSON.reduce((acc, item) => {
                         let a = item.work_time.split(':'); // copilot merci!!!!
                         let minutes = (+a[0]) * 60 + (+a[1]);
-                        return acc + item.h_rate / 60 * minutes;
+                        return Math.round(acc + item.h_rate / 60 * minutes);
                     }, 0);
                 }
 
